--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a software developer for an SAP consulting firm.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Harrisburg, PA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Bowling, camping, baking, cooking, reading, bartending, and doing crafts.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Reach retirement and live in our RV.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Woodbury, NJ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So I can have fun making neat stuff!</p>
     </section>
 
     <footer id="footer">
